# rust_geotiff

./: Cargo.toml
src/: decoder.rs  encoder.rs  error.rs  lib.rs  tags.rs
tests/: integration.rs
